Added seasons and walking animations.

--- a/Hammerhand.csproj
+++ b/Hammerhand.csproj
@@ -7,44 +7,44 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Assets\Image\Characters\Alex.0.png" />
-    <None Remove="Assets\Image\Characters\Alex.1.png" />
-    <None Remove="Assets\Image\Characters\Alex.2.png" />
-    <None Remove="Assets\Image\Characters\Alex.3.png" />
-    <None Remove="Assets\Image\Characters\Isaiah.0.png" />
-    <None Remove="Assets\Image\Characters\Isaiah.1.png" />
-    <None Remove="Assets\Image\Characters\Isaiah.2.png" />
-    <None Remove="Assets\Image\Characters\Isaiah.3.png" />
-    <None Remove="Assets\Image\Characters\Jordan.0.png" />
-    <None Remove="Assets\Image\Characters\Jordan.1.png" />
-    <None Remove="Assets\Image\Characters\Jordan.2.png" />
-    <None Remove="Assets\Image\Characters\Jordan.3.png" />
-    <None Remove="Assets\Image\Characters\Katie.0.png" />
-    <None Remove="Assets\Image\Characters\Katie.1.png" />
-    <None Remove="Assets\Image\Characters\Katie.2.png" />
-    <None Remove="Assets\Image\Characters\Katie.3.png" />
-    <None Remove="Assets\Image\Characters\Kayla.0.png" />
-    <None Remove="Assets\Image\Characters\Kayla.1.png" />
-    <None Remove="Assets\Image\Characters\Kayla.2.png" />
-    <None Remove="Assets\Image\Characters\Kayla.3.png" />
-    <None Remove="Assets\Image\Characters\Lucas.0.png" />
-    <None Remove="Assets\Image\Characters\Lucas.1.png" />
-    <None Remove="Assets\Image\Characters\Lucas.2.png" />
-    <None Remove="Assets\Image\Characters\Lucas.3.png" />
-    <None Remove="Assets\Image\Characters\Owen.0.png" />
-    <None Remove="Assets\Image\Characters\Owen.1.png" />
-    <None Remove="Assets\Image\Characters\Owen.2.png" />
-    <None Remove="Assets\Image\Characters\Owen.3.png" />
-    <None Remove="Assets\Image\Characters\Riley.0.png" />
-    <None Remove="Assets\Image\Characters\Riley.1.png" />
-    <None Remove="Assets\Image\Characters\Riley.2.png" />
-    <None Remove="Assets\Image\Characters\Riley.3.png" />
-    <None Remove="Assets\Image\Characters\Sarah.0.png" />
-    <None Remove="Assets\Image\Characters\Sarah.1.png" />
-    <None Remove="Assets\Image\Characters\Sarah.2.png" />
-    <None Remove="Assets\Image\Characters\Sarah.3.png" />
-    <None Remove="Assets\Image\Characters\Shepherd.1.png" />
-    <None Remove="Assets\Image\Characters\Tim.0.png" />
+    <None Remove="Assets\Image\Characters\Alex.Autumn.png" />
+    <None Remove="Assets\Image\Characters\Alex.Spring.png" />
+    <None Remove="Assets\Image\Characters\Alex.Summer.png" />
+    <None Remove="Assets\Image\Characters\Alex.Winter.png" />
+    <None Remove="Assets\Image\Characters\Isaiah.Autumn.png" />
+    <None Remove="Assets\Image\Characters\Isaiah.Spring.png" />
+    <None Remove="Assets\Image\Characters\Isaiah.Summer.png" />
+    <None Remove="Assets\Image\Characters\Isaiah.Winter.png" />
+    <None Remove="Assets\Image\Characters\Jordan.Autumn.png" />
+    <None Remove="Assets\Image\Characters\Jordan.Spring.png" />
+    <None Remove="Assets\Image\Characters\Jordan.Summer.png" />
+    <None Remove="Assets\Image\Characters\Jordan.Winter.png" />
+    <None Remove="Assets\Image\Characters\Katie.Autumn.png" />
+    <None Remove="Assets\Image\Characters\Katie.Spring.png" />
+    <None Remove="Assets\Image\Characters\Katie.Summer.png" />
+    <None Remove="Assets\Image\Characters\Katie.Winter.png" />
+    <None Remove="Assets\Image\Characters\Kayla.Autumn.png" />
+    <None Remove="Assets\Image\Characters\Kayla.Spring.png" />
+    <None Remove="Assets\Image\Characters\Kayla.Summer.png" />
+    <None Remove="Assets\Image\Characters\Kayla.Winter.png" />
+    <None Remove="Assets\Image\Characters\Lucas.Autumn.png" />
+    <None Remove="Assets\Image\Characters\Lucas.Spring.png" />
+    <None Remove="Assets\Image\Characters\Lucas.Summer.png" />
+    <None Remove="Assets\Image\Characters\Lucas.Winter.png" />
+    <None Remove="Assets\Image\Characters\Owen.Autumn.png" />
+    <None Remove="Assets\Image\Characters\Owen.Spring.png" />
+    <None Remove="Assets\Image\Characters\Owen.Summer.png" />
+    <None Remove="Assets\Image\Characters\Owen.Winter.png" />
+    <None Remove="Assets\Image\Characters\Riley.Autumn.png" />
+    <None Remove="Assets\Image\Characters\Riley.Spring.png" />
+    <None Remove="Assets\Image\Characters\Riley.Summer.png" />
+    <None Remove="Assets\Image\Characters\Riley.Winter.png" />
+    <None Remove="Assets\Image\Characters\Sarah.Autumn.png" />
+    <None Remove="Assets\Image\Characters\Sarah.Spring.png" />
+    <None Remove="Assets\Image\Characters\Sarah.Summer.png" />
+    <None Remove="Assets\Image\Characters\Sarah.Winter.png" />
+    <None Remove="Assets\Image\Characters\Shepherd.Autumn.png" />
+    <None Remove="Assets\Image\Characters\Tim.Winter.png" />
     <None Remove="Assets\Image\Icon.png" />
     <None Remove="Assets\Image\Items\Cup.png" />
     <None Remove="Assets\Image\World\0.png" />
@@ -60,10 +60,13 @@
     <None Remove="Assets\Image\World\Lights.png" />
     <None Remove="Assets\Image\World\Mainground.png" />
     <None Remove="Assets\Image\World\Television.png" />
+    <None Remove="Assets\Music\Ambience.ogg" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Assets\Image\Characters\Shepherd.1.png" />
+    <EmbeddedResource Include="Assets\Font.ttf" />
+    <EmbeddedResource Include="Assets\Image\Characters\Shepherd.Autumn.png" />
+    <EmbeddedResource Include="Assets\Music\Ambience.ogg" />
   </ItemGroup>
 
   <ItemGroup>
@@ -72,43 +75,43 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Assets\Image\Characters\Alex.0.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Alex.1.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Alex.2.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Alex.3.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Isaiah.0.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Isaiah.1.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Isaiah.2.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Isaiah.3.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Jordan.0.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Jordan.1.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Jordan.2.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Jordan.3.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Katie.0.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Katie.1.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Katie.2.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Katie.3.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Kayla.0.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Kayla.1.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Kayla.2.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Kayla.3.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Lucas.0.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Lucas.1.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Lucas.2.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Lucas.3.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Owen.0.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Owen.1.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Owen.2.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Owen.3.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Riley.0.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Riley.1.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Riley.2.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Riley.3.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Sarah.0.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Sarah.1.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Sarah.2.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Sarah.3.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Tim.0.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Alex.Winter.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Alex.Autumn.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Alex.Spring.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Alex.Summer.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Isaiah.Winter.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Isaiah.Autumn.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Isaiah.Spring.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Isaiah.Summer.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Jordan.Winter.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Jordan.Autumn.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Jordan.Spring.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Jordan.Summer.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Katie.Winter.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Katie.Autumn.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Katie.Spring.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Katie.Summer.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Kayla.Winter.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Kayla.Autumn.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Kayla.Spring.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Kayla.Summer.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Lucas.Winter.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Lucas.Autumn.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Lucas.Spring.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Lucas.Summer.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Owen.Winter.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Owen.Autumn.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Owen.Spring.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Owen.Summer.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Riley.Winter.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Riley.Autumn.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Riley.Spring.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Riley.Summer.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Sarah.Winter.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Sarah.Autumn.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Sarah.Spring.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Sarah.Summer.png" />
+    <EmbeddedResource Include="Assets\Image\Characters\Tim.Winter.png" />
     <EmbeddedResource Include="Assets\Image\Icon.png" />
     <EmbeddedResource Include="Assets\Image\Items\Cup.png" />
     <EmbeddedResource Include="Assets\Image\World\Foreground.png" />
