--- a/Hammerhand.csproj
+++ b/Hammerhand.csproj
@@ -1,134 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="Assets\Image\Characters\Alex.Autumn.png" />
-    <None Remove="Assets\Image\Characters\Alex.Spring.png" />
-    <None Remove="Assets\Image\Characters\Alex.Summer.png" />
-    <None Remove="Assets\Image\Characters\Alex.Winter.png" />
-    <None Remove="Assets\Image\Characters\Isaiah.Autumn.png" />
-    <None Remove="Assets\Image\Characters\Isaiah.Spring.png" />
-    <None Remove="Assets\Image\Characters\Isaiah.Summer.png" />
-    <None Remove="Assets\Image\Characters\Isaiah.Winter.png" />
-    <None Remove="Assets\Image\Characters\Jordan.Autumn.png" />
-    <None Remove="Assets\Image\Characters\Jordan.Spring.png" />
-    <None Remove="Assets\Image\Characters\Jordan.Summer.png" />
-    <None Remove="Assets\Image\Characters\Jordan.Winter.png" />
-    <None Remove="Assets\Image\Characters\Katie.Autumn.png" />
-    <None Remove="Assets\Image\Characters\Katie.Spring.png" />
-    <None Remove="Assets\Image\Characters\Katie.Summer.png" />
-    <None Remove="Assets\Image\Characters\Katie.Winter.png" />
-    <None Remove="Assets\Image\Characters\Kayla.Autumn.png" />
-    <None Remove="Assets\Image\Characters\Kayla.Spring.png" />
-    <None Remove="Assets\Image\Characters\Kayla.Summer.png" />
-    <None Remove="Assets\Image\Characters\Kayla.Winter.png" />
-    <None Remove="Assets\Image\Characters\Lucas.Autumn.png" />
-    <None Remove="Assets\Image\Characters\Lucas.Spring.png" />
-    <None Remove="Assets\Image\Characters\Lucas.Summer.png" />
-    <None Remove="Assets\Image\Characters\Lucas.Winter.png" />
-    <None Remove="Assets\Image\Characters\Owen.Autumn.png" />
-    <None Remove="Assets\Image\Characters\Owen.Spring.png" />
-    <None Remove="Assets\Image\Characters\Owen.Summer.png" />
-    <None Remove="Assets\Image\Characters\Owen.Winter.png" />
-    <None Remove="Assets\Image\Characters\Riley.Autumn.png" />
-    <None Remove="Assets\Image\Characters\Riley.Spring.png" />
-    <None Remove="Assets\Image\Characters\Riley.Summer.png" />
-    <None Remove="Assets\Image\Characters\Riley.Winter.png" />
-    <None Remove="Assets\Image\Characters\Sarah.Autumn.png" />
-    <None Remove="Assets\Image\Characters\Sarah.Spring.png" />
-    <None Remove="Assets\Image\Characters\Sarah.Summer.png" />
-    <None Remove="Assets\Image\Characters\Sarah.Winter.png" />
-    <None Remove="Assets\Image\Characters\Shepherd.Autumn.png" />
-    <None Remove="Assets\Image\Characters\Tim.Winter.png" />
-    <None Remove="Assets\Image\Icon.png" />
-    <None Remove="Assets\Image\Items\Cup.png" />
-    <None Remove="Assets\Image\World\0.png" />
-    <None Remove="Assets\Image\World\1.png" />
-    <None Remove="Assets\Image\World\2.png" />
-    <None Remove="Assets\Image\World\3.png" />
-    <None Remove="Assets\Image\World\4.png" />
-    <None Remove="Assets\Image\World\5.png" />
-    <None Remove="Assets\Image\World\6.png" />
-    <None Remove="Assets\Image\World\7.png" />
-    <None Remove="Assets\Image\World\Background.png" />
-    <None Remove="Assets\Image\World\Foreground.png" />
-    <None Remove="Assets\Image\World\Lights.png" />
-    <None Remove="Assets\Image\World\Mainground.png" />
-    <None Remove="Assets\Image\World\Television.png" />
-    <None Remove="Assets\Music\Ambience.ogg" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Assets\Font.ttf" />
-    <EmbeddedResource Include="Assets\Image\Characters\Shepherd.Autumn.png" />
-    <EmbeddedResource Include="Assets\Music\Ambience.ogg" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="SFML.Net" Version="2.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Assets\Image\Characters\Alex.Winter.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Alex.Autumn.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Alex.Spring.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Alex.Summer.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Isaiah.Winter.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Isaiah.Autumn.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Isaiah.Spring.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Isaiah.Summer.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Jordan.Winter.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Jordan.Autumn.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Jordan.Spring.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Jordan.Summer.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Katie.Winter.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Katie.Autumn.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Katie.Spring.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Katie.Summer.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Kayla.Winter.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Kayla.Autumn.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Kayla.Spring.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Kayla.Summer.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Lucas.Winter.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Lucas.Autumn.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Lucas.Spring.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Lucas.Summer.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Owen.Winter.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Owen.Autumn.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Owen.Spring.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Owen.Summer.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Riley.Winter.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Riley.Autumn.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Riley.Spring.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Riley.Summer.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Sarah.Winter.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Sarah.Autumn.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Sarah.Spring.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Sarah.Summer.png" />
-    <EmbeddedResource Include="Assets\Image\Characters\Tim.Winter.png" />
-    <EmbeddedResource Include="Assets\Image\Icon.png" />
-    <EmbeddedResource Include="Assets\Image\Items\Cup.png" />
-    <EmbeddedResource Include="Assets\Image\World\Foreground.png" />
-    <EmbeddedResource Include="Assets\Image\World\Lights.png" />
-    <EmbeddedResource Include="Assets\Image\World\Television.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Assets\Image\World\Background.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Assets\Image\World\Mainground.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Logic\" />
-  </ItemGroup>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="Current" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup />
 </Project>
